--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Custom made chat bot for twitch.tv",
 	"main": "maximo.ts",
 	"scripts": {
-		"dev": "nodemon"
+		"dev": "nodemon maximo.ts",
+		"start": "node build/maximo.ts",
+		"build": "tsc --project ./"
 	},
 	"repository": {
 		"type": "git",
@@ -21,5 +23,17 @@
 	"bugs": {
 		"url": "https://github.com/gigili/maximo-bot/issues"
 	},
-	"homepage": "https://github.com/gigili/maximo-bot#readme"
+	"homepage": "https://github.com/gigili/maximo-bot#readme",
+	"dependencies": {
+		"axios": "^0.20.0",
+		"dotenv": "^8.2.0",
+		"tmi.js": "^1.5.0",
+		"typescript": "^4.0.3"
+	},
+	"devDependencies": {
+		"@types/node": "^14.11.8",
+		"@types/tmi.js": "^1.4.2",
+		"nodemon": "^2.0.4",
+		"ts-node": "^9.0.0"
+	}
 }
