--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Custom made chat bot for twitch.tv",
 	"main": "maximo.ts",
 	"scripts": {
-		"dev": "nodemon maximo.ts",
+		"dev": "ts-node maximo.ts",
 		"start": "node build/maximo.ts",
 		"build": "tsc --project ./"
 	},
@@ -27,11 +27,13 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"dotenv": "^8.2.0",
+		"sqlite3": "^5.0.2",
 		"tmi.js": "^1.7.5",
 		"typescript": "^4.2.3"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.36",
+		"@types/sqlite3": "^3.1.7",
 		"@types/tmi.js": "^1.7.1",
 		"nodemon": "^2.0.7",
 		"ts-node": "^9.1.1"
