--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,22 @@
 [*]
-indent_style = tab
-indent_size = 4
-tab_width = 4
 charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = tab
 insert_final_newline = true
 max_line_length = 120
+tab_width = 4
 trim_trailing_whitespace = true
 ij_continuation_indent_size = 8
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_smart_tabs = false
+ij_visual_guides = none
 ij_wrap_on_typing = false
 
 [*.css]
+indent_style = space
 ij_css_align_closing_brace_with_properties = false
 ij_css_blank_lines_around_nested_selector = 1
 ij_css_blank_lines_between_blocks = 1
@@ -35,14 +37,17 @@ ij_css_value_alignment = do_not_align
 
 [*.feature]
 indent_size = 2
+indent_style = space
 ij_gherkin_keep_indents_on_empty_lines = false
 
 [*.haml]
 indent_size = 2
+indent_style = space
 ij_haml_keep_indents_on_empty_lines = false
 
 [*.less]
 indent_size = 2
+indent_style = space
 ij_less_align_closing_brace_with_properties = false
 ij_less_blank_lines_around_nested_selector = 1
 ij_less_blank_lines_between_blocks = 1
@@ -63,6 +68,7 @@ ij_less_value_alignment = 0
 
 [*.sass]
 indent_size = 2
+indent_style = space
 ij_sass_align_closing_brace_with_properties = false
 ij_sass_blank_lines_around_nested_selector = 1
 ij_sass_blank_lines_between_blocks = 1
@@ -83,6 +89,7 @@ ij_sass_value_alignment = 0
 
 [*.scss]
 indent_size = 2
+indent_style = space
 ij_scss_align_closing_brace_with_properties = false
 ij_scss_blank_lines_around_nested_selector = 1
 ij_scss_blank_lines_between_blocks = 1
@@ -103,6 +110,7 @@ ij_scss_value_alignment = 0
 
 [*.styl]
 indent_size = 2
+indent_style = space
 ij_stylus_align_closing_brace_with_properties = false
 ij_stylus_blank_lines_around_nested_selector = 1
 ij_stylus_blank_lines_between_blocks = 1
@@ -122,7 +130,6 @@ ij_stylus_use_double_quotes = true
 ij_stylus_value_alignment = 0
 
 [*.vue]
-indent_style = tab
 ij_continuation_indent_size = 4
 ij_smart_tabs = true
 ij_vue_indent_children_of_top_level = template
@@ -142,6 +149,7 @@ ij_editorconfig_space_before_comma = false
 ij_editorconfig_spaces_around_assignment_operators = true
 
 [{*.ant, *.fxml, *.jhm, *.jnlp, *.jrxml, *.rng, *.tld, *.wsdl, *.xml, *.xsd, *.xsl, *.xslt, *.xul}]
+indent_style = space
 ij_xml_align_attributes = true
 ij_xml_align_text = false
 ij_xml_attribute_wrap = normal
@@ -173,8 +181,8 @@ ij_typescript_align_multiline_ternary_operation = false
 ij_typescript_align_object_properties = 0
 ij_typescript_align_union_types = false
 ij_typescript_align_var_statements = 0
-ij_typescript_array_initializer_new_line_after_left_brace = false
-ij_typescript_array_initializer_right_brace_on_new_line = false
+ij_typescript_array_initializer_new_line_after_left_brace = true
+ij_typescript_array_initializer_right_brace_on_new_line = true
 ij_typescript_array_initializer_wrap = off
 ij_typescript_assignment_wrap = off
 ij_typescript_binary_operation_sign_on_next_line = false
@@ -195,7 +203,7 @@ ij_typescript_catch_on_new_line = false
 ij_typescript_chained_call_dot_on_new_line = true
 ij_typescript_class_brace_style = end_of_line
 ij_typescript_comma_on_new_line = false
-ij_typescript_do_while_brace_force = never
+ij_typescript_do_while_brace_force = always
 ij_typescript_else_on_new_line = false
 ij_typescript_enforce_trailing_comma = keep
 ij_typescript_extends_keyword_wrap = off
@@ -203,14 +211,14 @@ ij_typescript_extends_list_wrap = off
 ij_typescript_field_prefix = _
 ij_typescript_file_name_style = relaxed
 ij_typescript_finally_on_new_line = false
-ij_typescript_for_brace_force = never
+ij_typescript_for_brace_force = always
 ij_typescript_for_statement_new_line_after_left_paren = false
 ij_typescript_for_statement_right_paren_on_new_line = false
 ij_typescript_for_statement_wrap = off
-ij_typescript_force_quote_style = false
-ij_typescript_force_semicolon_style = false
+ij_typescript_force_quote_style = true
+ij_typescript_force_semicolon_style = true
 ij_typescript_function_expression_brace_style = end_of_line
-ij_typescript_if_brace_force = never
+ij_typescript_if_brace_force = if_multiline
 ij_typescript_import_merge_members = global
 ij_typescript_import_prefer_absolute_path = global
 ij_typescript_import_sort_members = true
@@ -220,7 +228,7 @@ ij_typescript_imports_wrap = on_every_item
 ij_typescript_indent_case_from_switch = true
 ij_typescript_indent_chained_calls = true
 ij_typescript_indent_package_children = 0
-ij_typescript_jsdoc_include_types = false
+ij_typescript_jsdoc_include_types = true
 ij_typescript_jsx_attribute_value = braces
 ij_typescript_keep_blank_lines_in_code = 2
 ij_typescript_keep_first_column_comment = true
@@ -323,14 +331,14 @@ ij_typescript_use_path_mapping = always
 ij_typescript_use_public_modifier = false
 ij_typescript_use_semicolon_after_statement = true
 ij_typescript_var_declaration_wrap = normal
-ij_typescript_while_brace_force = never
+ij_typescript_while_brace_force = always
 ij_typescript_while_on_new_line = false
 ij_typescript_wrap_comments = false
-indent_style = tab
 
 [{*.bash, *.sh, *.zsh}]
-indent_size = 4
-tab_width = 4
+indent_size = 2
+indent_style = space
+tab_width = 2
 ij_shell_binary_ops_start_line = false
 ij_shell_keep_column_alignment_padding = false
 ij_shell_minify_program = false
@@ -338,7 +346,6 @@ ij_shell_redirect_followed_by_space = false
 ij_shell_switch_cases_indented = false
 
 [{*.cjs, *.js}]
-indent_style = tab
 ij_continuation_indent_size = 4
 ij_javascript_align_imports = false
 ij_javascript_align_multiline_array_initializer_expression = false
@@ -384,10 +391,10 @@ ij_javascript_for_brace_force = always
 ij_javascript_for_statement_new_line_after_left_paren = false
 ij_javascript_for_statement_right_paren_on_new_line = false
 ij_javascript_for_statement_wrap = off
-ij_javascript_force_quote_style = false
-ij_javascript_force_semicolon_style = false
+ij_javascript_force_quote_style = true
+ij_javascript_force_semicolon_style = true
 ij_javascript_function_expression_brace_style = end_of_line
-ij_javascript_if_brace_force = always
+ij_javascript_if_brace_force = if_multiline
 ij_javascript_import_merge_members = global
 ij_javascript_import_prefer_absolute_path = global
 ij_javascript_import_sort_members = true
@@ -402,7 +409,7 @@ ij_javascript_keep_blank_lines_in_code = 2
 ij_javascript_keep_first_column_comment = true
 ij_javascript_keep_indents_on_empty_lines = false
 ij_javascript_keep_line_breaks = true
-ij_javascript_keep_simple_blocks_in_one_line = false
+ij_javascript_keep_simple_blocks_in_one_line = true
 ij_javascript_keep_simple_methods_in_one_line = false
 ij_javascript_line_comment_add_space = true
 ij_javascript_line_comment_at_first_column = false
@@ -505,6 +512,7 @@ ij_javascript_wrap_comments = false
 
 [{*.cjsx, *.coffee}]
 indent_size = 2
+indent_style = space
 tab_width = 2
 ij_continuation_indent_size = 2
 ij_coffeescript_align_function_body = false
@@ -601,9 +609,6 @@ ij_coffeescript_use_semicolon_after_statement = false
 ij_coffeescript_var_declaration_wrap = normal
 
 [{*.har, *.jsb2, *.jsb3, *.json, .babelrc, .eslintrc, .prettierrc, .stylelintrc, bowerrc, jest.config}]
-indent_style = tab
-indent_size = 4
-tab_width = 4
 ij_json_keep_blank_lines_in_code = 0
 ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
@@ -616,8 +621,6 @@ ij_json_spaces_within_brackets = false
 ij_json_wrap_long_lines = false
 
 [{*.htm, *.html, *.ng, *.sht, *.shtm, *.shtml}]
-indent_size = 2
-tab_width = 2
 ij_html_add_new_line_before_tags = body, div, p, form, h1, h2, h3
 ij_html_align_attributes = true
 ij_html_align_text = false
@@ -626,7 +629,7 @@ ij_html_block_comment_at_first_column = true
 ij_html_do_not_align_children_of_min_lines = 0
 ij_html_do_not_break_if_inline_tags = title, h1, h2, h3, h4, h5, h6, p
 ij_html_do_not_indent_children_of_tags = html, body, thead, tbody, tfoot
-ij_html_enforce_quotes = false
+ij_html_enforce_quotes = true
 ij_html_inline_tags = a, abbr, acronym, b, basefont, bdo, big, br, cite, cite, code, dfn, em, font, i, img, input, kbd, label, q, s, samp, select, small, span, strike, strong, sub, sup, textarea, tt, u, var
 ij_html_keep_blank_lines = 2
 ij_html_keep_indents_on_empty_lines = false
@@ -645,7 +648,32 @@ ij_html_space_inside_empty_tag = false
 ij_html_text_wrap = normal
 ij_html_uniform_ident = false
 
+[{*.jade, *.pug}]
+indent_style = space
+
+[{*.markdown, *.md}]
+indent_style = space
+ij_markdown_force_one_space_after_blockquote_symbol = true
+ij_markdown_force_one_space_after_header_symbol = true
+ij_markdown_force_one_space_after_list_bullet = true
+ij_markdown_force_one_space_between_words = true
+ij_markdown_keep_indents_on_empty_lines = false
+ij_markdown_max_lines_around_block_elements = 1
+ij_markdown_max_lines_around_header = 1
+ij_markdown_max_lines_between_paragraphs = 1
+ij_markdown_min_lines_around_block_elements = 1
+ij_markdown_min_lines_around_header = 1
+ij_markdown_min_lines_between_paragraphs = 1
+
 [{*.yaml, *.yml}]
 indent_size = 2
+ij_yaml_align_values_properties = do_not_align
+ij_yaml_autoinsert_sequence_marker = true
+ij_yaml_block_mapping_on_new_line = false
+ij_yaml_indent_sequence_value = true
 ij_yaml_keep_indents_on_empty_lines = false
 ij_yaml_keep_line_breaks = true
+ij_yaml_sequence_on_new_line = false
+ij_yaml_space_before_colon = false
+ij_yaml_spaces_within_braces = true
+ij_yaml_spaces_within_brackets = true
