--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
 	"homepage": "https://github.com/gigili/maximo-bot#readme",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"discord.js": "^12.5.3",
 		"dotenv": "^10.0.0",
+		"sqlite3": "^5.0.2",
 		"tmi.js": "^1.8.3",
-		"typescript": "^4.3.4",
-		"sqlite3": "^5.0.2"
+		"typescript": "^4.3.4"
 	},
 	"devDependencies": {
 		"@types/node": "^15.12.2",
+		"@types/sqlite3": "^3.1.7",
 		"@types/tmi.js": "^1.7.1",
 		"nodemon": "^2.0.7",
 		"ts-node": "^10.0.0"
